--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "new",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
